package productivity_app;

public interface Command {
  void execute();
}
