@startuml

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
hide stereotypes

interface ApplicationFacade

class SimpleApplicationFacade

class User
class Task
class Note
class CalendarEvent

class KanbanBoard
class PomodoroTimer
class NotesService
class CalendarService

class Data
class ImportResult
class ProductivityDomainFactory
class BasicIcsAdapter
interface CalendarStorage

interface Command
class AddTaskCommand
class UpdateTaskCommand
class RemoveTaskCommand
class AddNoteCommand
class EditNoteCommand
class RemoveNoteCommand
class AddEventCommand
class EditEventCommand
class RemoveEventCommand

ApplicationFacade : +createOrSetCurrentUser(...)
ApplicationFacade : +getCurrentUser()
ApplicationFacade : +addTask(...)
ApplicationFacade : +removeTask(...)
ApplicationFacade : +updateTask(...)
ApplicationFacade : +listTasks()
ApplicationFacade : +setWorkDurationSeconds(...)
ApplicationFacade : +setBreakDurationSeconds(...)
ApplicationFacade : +startTimer()
ApplicationFacade : +pauseTimer()
ApplicationFacade : +stopTimer()
ApplicationFacade : +getTimerState()
ApplicationFacade : +isWorkPhase()
ApplicationFacade : +getSecondsRemaining()
ApplicationFacade : +getWorkDurationSeconds()
ApplicationFacade : +getBreakDurationSeconds()
ApplicationFacade : +exportData(...)
ApplicationFacade : +importData(...)
ApplicationFacade : +startEyeStrainReminder()
ApplicationFacade : +stopEyeStrainReminder()
ApplicationFacade : +checkAndConsumeEyeNotice()
ApplicationFacade : +getAppTitle()
ApplicationFacade : +listNotes()
ApplicationFacade : +addNote(...)
ApplicationFacade : +updateNote(...)
ApplicationFacade : +removeNote(...)
ApplicationFacade : +listEvents()
ApplicationFacade : +addEvent(...)
ApplicationFacade : +updateEvent(...)
ApplicationFacade : +removeEvent(...)

SimpleApplicationFacade : +createOrSetCurrentUser(...)
SimpleApplicationFacade : +listTasks()
SimpleApplicationFacade : +listNotes()
SimpleApplicationFacade : +listEvents()
SimpleApplicationFacade : +exportData(...)
SimpleApplicationFacade : +importData(...)

User : -name
User : +User(name)
User : +getName()
User : +setName(...)

Task : -label
Task : -column
Task : +Task(label, column)
Task : +getLabel()
Task : +getColumn()
Task : +setLabel(...)
Task : +setColumn(...)

Note : -title
Note : -body
Note : +Note(title, body)
Note : +getTitle()
Note : +getBody()
Note : +setTitle(...)
Note : +setBody(...)

CalendarEvent : -date
CalendarEvent : -title
CalendarEvent : +CalendarEvent(date, title)
CalendarEvent : +getDate()
CalendarEvent : +getTitle()
CalendarEvent : +setDate(...)
CalendarEvent : +setTitle(...)
CalendarEvent : +compareTo(...)

KanbanBoard : -(singleton instance)
KanbanBoard : +getInstance()
KanbanBoard : +addTask(...)
KanbanBoard : +removeTaskByLabel(...)
KanbanBoard : +updateTask(...)
KanbanBoard : +getTasks()
KanbanBoard : +setTasks(...)

PomodoroTimer : -(singleton instance)
PomodoroTimer : +getInstance()
PomodoroTimer : +setWorkDurationSeconds(...)
PomodoroTimer : +setBreakDurationSeconds(...)
PomodoroTimer : +start()
PomodoroTimer : +pause()
PomodoroTimer : +stop()
PomodoroTimer : +getState()
PomodoroTimer : +isWorkPhase()
PomodoroTimer : +getSecondsRemaining()
PomodoroTimer : +getWorkDurationInSeconds()
PomodoroTimer : +getBreakDurationInSeconds()

NotesService : +getNotes()
NotesService : +addNote(...)
NotesService : +updateNote(...)
NotesService : +removeNote(...)
NotesService : +setNotes(...)

CalendarService : +getEvents()
CalendarService : +addEvent(...)
CalendarService : +updateEvent(...)
CalendarService : +removeEvent(...)
CalendarService : +setEvents(...)

Data : +exportData(path, user, tasks, notes, events, workSeconds, breakSeconds)
Data : +importData(path)
ImportResult : +user
ImportResult : +tasks
ImportResult : +notes
ImportResult : +events
ImportResult : +workSeconds
ImportResult : +breakSeconds

ProductivityDomainFactory : +createUser(...)
ProductivityDomainFactory : +createTask(...)
ProductivityDomainFactory : +createNote(...)
ProductivityDomainFactory : +createCalendarEvent(...)

CalendarStorage : +formatEvents(...)
CalendarStorage : +parseEvents(...)
BasicIcsAdapter : +formatEvents(...)
BasicIcsAdapter : +parseEvents(...)

Command : +execute()
AddTaskCommand : +execute()
UpdateTaskCommand : +execute()
RemoveTaskCommand : +execute()
AddNoteCommand : +execute()
EditNoteCommand : +execute()
RemoveNoteCommand : +execute()
AddEventCommand : +execute()
EditEventCommand : +execute()
RemoveEventCommand : +execute()

ApplicationFacade <|.. SimpleApplicationFacade

SimpleApplicationFacade --> KanbanBoard
SimpleApplicationFacade --> PomodoroTimer
SimpleApplicationFacade --> Data
SimpleApplicationFacade --> ProductivityDomainFactory
SimpleApplicationFacade --> NotesService
SimpleApplicationFacade --> CalendarService
SimpleApplicationFacade --> User

KanbanBoard --> Task
NotesService --> Note
CalendarService --> CalendarEvent

Data --> User
Data --> Task
Data --> Note
Data --> CalendarEvent
Data --> CalendarStorage
Data --> ImportResult

ProductivityDomainFactory --> User
ProductivityDomainFactory --> Task
ProductivityDomainFactory --> Note
ProductivityDomainFactory --> CalendarEvent

BasicIcsAdapter ..|> CalendarStorage

Command <|.. AddTaskCommand
Command <|.. UpdateTaskCommand
Command <|.. RemoveTaskCommand
Command <|.. AddNoteCommand
Command <|.. EditNoteCommand
Command <|.. RemoveNoteCommand
Command <|.. AddEventCommand
Command <|.. EditEventCommand
Command <|.. RemoveEventCommand

AddTaskCommand --> ApplicationFacade
UpdateTaskCommand --> ApplicationFacade
RemoveTaskCommand --> ApplicationFacade
AddNoteCommand --> ApplicationFacade
EditNoteCommand --> ApplicationFacade
RemoveNoteCommand --> ApplicationFacade
AddEventCommand --> ApplicationFacade
EditEventCommand --> ApplicationFacade
RemoveEventCommand --> ApplicationFacade

@enduml